@@ -117,7 +117,9 @@ you will only be able to specify colours by RGB value.
 
 Does almost no error checking.
 
-Can be slow to load because rgb.txt is large.
+Can be slow to load because rgb.txt is large; however we now load a single
+instance of the colour names when the module is first used and these names are
+then shared.
 
 If you scroll the list by keyboard or use the mouse to move the colour sliders
 the colour updates as you go; but if you use the mouse on the scrollbar you
